--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.skradacz.audiometr"
+        applicationId "com.skradacz.audiometer"
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 1
