--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,37 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.skradacz.audiometer.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".ExaminationActivity"
+            android:name="com.skradacz.audiometer.ExaminationActivity"
             android:label="@string/title_activity_examination"
-            android:parentActivityName=".MainActivity" >
+            android:screenOrientation="portrait"
+            android:parentActivityName="com.skradacz.audiometer.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.skradacz.audiometer.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.skradacz.audiometer.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="portrait"
+            android:parentActivityName="com.skradacz.audiometer.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.skradacz.audiometer.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.skradacz.audiometer.HowToActivity"
+            android:label="@string/title_activity_how_to"
+            android:screenOrientation="portrait"
+            android:parentActivityName="com.skradacz.audiometer.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.skradacz.audiometer.MainActivity" />
